--- a/lens/package.json
+++ b/lens/package.json
@@ -15,7 +15,8 @@
     "react": "18.1.0",
     "react-avatar-edit": "^1.2.0",
     "react-dom": "18.1.0",
-    "react-hot-toast": "^2.2.0"
+    "react-hot-toast": "^2.2.0",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.36",
